--- a/app/views/ordens/update_productos.js.erb
+++ b/app/views/ordens/update_productos.js.erb
@@ -1,2 +1,4 @@
-$('#producto_select').html("<%= escape_javascript(options_from_collection_for_select(@productos)) %>");
-$('#version_select').html("<%= escape_javascript(options_from_collection_for_select(@versions)) %>");
+
+
+$('#producto_select').html("<%= escape_javascript(options_from_collection_for_select(@productos,"id","name",1)) %>");
+$('#version_select').html("<%= escape_javascript(options_from_collection_for_select(@versions,"id","descrip",1)) %>");
