--- a/app/views/productos/_producto.html.erb
+++ b/app/views/productos/_producto.html.erb
@@ -1,1 +1,1 @@
-<option value="<%= producto.id %>"><%= producto.descrip.titleize %></option>
+<option value="<%= producto.id %>"><%= producto.name.titleize %></option>
