--- a/app/views/ordens/update_versions.js.erb
+++ b/app/views/ordens/update_versions.js.erb
@@ -1,1 +1,2 @@
-$('#version_select').html("<%= escape_javascript(options_from_collection_for_select(@versions)) %>");
+
+$('#version_select').html("<%= escape_javascript(options_from_collection_for_select(@versions,"id","descrip",1)) %>");
