--- a/app/views/reports/rpt_contratos3_pdf.html.erb
+++ b/app/views/reports/rpt_contratos3_pdf.html.erb
@@ -21,32 +21,197 @@
     Hasta <input type="date" name="fecha2" value="2019-12-31" style = "width: 150px" >
   </div>
 
-
-
-<table>
-    <tr>
+<tr>
       <td>
         <div class="field">
-            <input id="check_cliente" name="check_cliente" type="checkbox" value="true" checked />
+          <input id="check_medio" name="check_medio" type="checkbox" value="true" checked />
           <div class="small">
-            Todos los clientes
+            Todos los Medios
           </div>
         </div>
         
       </td>
       <td>
       <div class="field">
-        <h5>  Cliente </h5>
-        <%= select_tag(:customer_id,options_from_collection_for_select(@customers,'id','name'),:id => "customer_select"  ) %>
+        <h5>  Medios </h5>
+        <%= select_tag(:medio_id,options_from_collection_for_select(@medios,'id','full_name'),:id => "medio_select"  ) %>
       </div>
       </td>
       
     </tr>
-    <tr>
-  </table>
-  <%= submit_tag   "PDF", :name => "print" %>
-  <%= submit_tag "Excel", :name => "print" %>
-     
+ 
+<br> 
+ <%= submit_tag "To PDF", :name => "print" %>
+ <%= submit_tag "To Excel", :name => "print" %>
+  
 <% end %>
-<br />
 
+   
+</html>
+
+<script>
+
+$(document).ready(function() {
+  
+  if ($('#check_cliente').is(":checked")) {
+      $('#customer_select').attr('disabled', true); //disable input
+   }
+   else {
+      $('#customer_select').removeAttr('disabled'); //enable input
+   }
+   
+   
+   $('#check_cliente').click(function () {
+        //check if checkbox is checked
+        if ($(this).is(':checked')) {
+
+           $('#customer_select').attr('disabled', true); //disable input
+
+        } else {
+             $('#customer_select').removeAttr('disabled'); //enable input
+            
+        }
+    });
+
+  if ($('#check_medio').is(":checked")) {
+      $('#medio_select').attr('disabled', true); //disable input
+   }
+   else {
+      $('#medio_select').removeAttr('disabled'); //enable input
+   }
+   
+   $('#check_medio').click(function () {
+        //check if checkbox is checked
+        if ($(this).is(':checked')) {
+
+           $('#medio_select').attr('disabled', true); //disable input
+
+        } else {
+             $('#medio_select').removeAttr('disabled'); //enable input
+            
+        }
+    });
+    
+   if ($('#check_marca').is(":checked")) {
+      $('#marca_select').attr('disabled', true); //disable input
+   }
+   else {
+      $('#marca_select').removeAttr('disabled'); //enable input
+   }
+   
+     $('#check_marca').click(function () {
+        //check if checkbox is checked
+        if ($(this).is(':checked')) {
+
+           $('#marca_select').attr('disabled', true); //disable input
+
+        } else {
+             $('#marca_select').removeAttr('disabled'); //enable input
+            
+        }
+    });
+  if ($('#check_producto').is(":checked")) {
+      $('#producto_select').attr('disabled', true); //disable input
+   }
+   else {
+      $('#producto_select').removeAttr('disabled'); //enable input
+   }
+   
+
+   $('#check_producto').click(function () {
+        //check if checkbox is checked
+        if ($(this).is(':checked')) {
+
+           $('#producto_select').attr('disabled', true); //disable input
+
+        } else {
+             $('#producto_select').removeAttr('disabled'); //enable input
+            
+        }
+    });
+
+  if ($('#check_version').is(":checked")) {
+      $('#version_select').attr('disabled', true); //disable input
+   }
+   else {
+      $('#version_select').removeAttr('disabled'); //enable input
+   }
+   
+   $('#check_version').click(function () {
+        //check if checkbox is checked
+        if ($(this).is(':checked')) {
+
+           $('#version_select').attr('disabled', true); //disable input
+
+        } else {
+             $('#version_select').removeAttr('disabled'); //enable input
+            
+        }
+    });
+
+   if ($('#check_ciudad').is(":checked")) {
+      $('#ciudad_select').attr('disabled', true); //disable input
+   }
+   else {
+      $('#ciudad_select').removeAttr('disabled'); //enable input
+   }
+   
+   $('#check_ciudad').click(function () {
+        //check if checkbox is checked
+        if ($(this).is(':checked')) {
+
+           $('#ciudad_select').attr('disabled', true); //disable input
+
+        } else {
+             $('#ciudad_select').removeAttr('disabled'); //enable input
+            
+        }
+    });
+    
+  if ($('#check_tipoorden').is(":checked")) {
+      $('#tipoorden_select').attr('disabled', true); //disable input
+   }
+   else {
+      $('#tipoorden_select').removeAttr('disabled'); //enable input
+   }
+   
+  
+   $('#check_tipoorden').click(function () {
+        //check if checkbox is checked
+        if ($(this).is(':checked')) {
+
+           $('#tipoorden_select').attr('disabled', true); //disable input
+
+        } else {
+           $('#tipoorden_select').removeAttr('disabled'); //enable input
+            
+        }
+    });
+  
+    $('#customer_select').change(function() {
+      $.ajax({
+        url: "/ordens/update_marcas",
+        data: {
+          customer_id : $('#customer_select').val()
+        },
+        dataType: "script"
+      });
+    
+    });
+    
+    $('#marca_select').change(function() {
+      $.ajax({
+        url: "/ordens/update_productos",
+        data: {
+          marca_id : $('#marca_select').val()
+        },
+        dataType: "script"
+      });
+    });
+    
+    
+  });
+  
+  </script>
+  
+ 
