--- a/app/views/supplier_payments/rpt_contrato_01.pdf.erb
+++ b/app/views/supplier_payments/rpt_contrato_01.pdf.erb
@@ -175,6 +175,7 @@
             <td width="44%" align="right"> </td>
             </tr>
             </table>   
+
             <table style=  'font-size:80% ;width:100%'>       
             <tr>
             
@@ -184,7 +185,18 @@
             <td width="10%" align="right"> <%= money(tot_cont2) %></td>
             <td width="44%" align="right"> </td>
             </tr>
+            <tr>
+            <td width="26%"></td>
+            <td width="10%" align="right"></td>
+            <td width="10%" align="right"> </td>
+            <td width="10%" align="right"></td>
+            <td width="44%" align="right"> </td>
+              
+            </tr>    
             </table>
+
+
+
 
 
         <%end%>
