--- a/app/views/supplier_payments/rpt_contrato_01.pdf.erb
+++ b/app/views/supplier_payments/rpt_contrato_01.pdf.erb
@@ -29,7 +29,7 @@
             
                   
         <%  @detalle.each do |compra| %>
-            <br> 
+          
               <table style=  'font-size:80% ;width:100%'>    
 
                   <tr style="font-weight:bold">
@@ -193,6 +193,24 @@
             <td width="44%" align="right"> </td>
               
             </tr>    
+             <tr>
+            <td width="26%"></td>
+            <td width="10%" align="right"></td>
+            <td width="10%" align="right"> </td>
+            <td width="10%" align="right"></td>
+            <td width="44%" align="right"> </td>
+              
+            </tr>    
+             <tr>
+            <td width="26%"></td>
+            <td width="10%" align="right"></td>
+            <td width="10%" align="right"> </td>
+            <td width="10%" align="right"></td>
+            <td width="44%" align="right"> </td>
+              
+            </tr>    
+
+
             </table>
 
 
