--- a/app/views/supplier_payments/rpt_contrato_01.pdf.erb
+++ b/app/views/supplier_payments/rpt_contrato_01.pdf.erb
@@ -16,7 +16,17 @@
                 
              <table style=  'font-size:80% ;width:100%'>    
 
-                  <tr style="font-weight:bold">
+               <% if  "[page]" == 1  %>
+               <% puts "pagina" %> 
+               <% puts "" %>
+                  <tr style="font-weight:bold  ">
+
+
+               <% else %>
+
+                  <tr style="font-weight:bold; display:block; clear:both; page-break-before: always;">
+               <% end %>       
+
                   <td width="8%" >CANAL : </td>
                   <td width="50%"align="left"> <%= detalle.get_medio(detalle.medio_id)   %></td>
                   <td width="42%"> </td>    
