--- a/app/views/ordens/ordens_products/_form.html.erb
+++ b/app/views/ordens/ordens_products/_form.html.erb
@@ -1,9 +1,9 @@
-  
+
 <%= simple_form_for [@orden, @orden_product] do |f| %>
- 
+
    <div class="form-inputs">
-    
-    
+
+
    <table>
       <tr>
         <th>Programa/elemento</th>
@@ -12,15 +12,15 @@
         <th>03</th>
         <th>04</th>
         <th>05</th>
-        <th>06</th>        
+        <th>06</th>
         <th>07</th>
-        <th>08</th>        
+        <th>08</th>
         <th>09</th>
-        <th>10</th>        
+        <th>10</th>
         <th>11</th>
         <th>12</th>
         <th>13</th>
-        <th>14</th>        
+        <th>14</th>
         <th>15</th>
         <th>16</th>
         <th>17</th>
@@ -28,42 +28,42 @@
         <th>19</th>
         <th>20</th>
         <th>21</th>
-        <th>22</th>        
+        <th>22</th>
         <th>23</th>
-        <th>24</th>        
+        <th>24</th>
         <th>25</th>
-        <th>26</th>        
+        <th>26</th>
         <th>27</th>
         <th>28</th>
         <th>29</th>
-        <th>30</th>        
-        <th>31</th>        
+        <th>30</th>
+        <th>31</th>
         <th>Cantidad</th>
         <th>Tarifa</th>
         <th>Costo</th>
         <th>Total</th>
       </tr>
     <tr>
-      <td>   
+      <td>
         <div >
         <input type="hidden" name="ac_item_id" id="ac_item_id" value="<% if @ac_item_id %><%= @ac_item_id %><% end %>"/>
-        
+
           <%= f.text_field :descrip   %>
         </div>
       </td>
-      
-      <td>        
+
+      <td>
         <div class="field">
           <%= f.number_field :d01,:style=> 'width: 25px',min: 0  %>
         </div>
       </td>
-          
+
       <td>
         <div class="field">
           <%= f.number_field :d02,:style=> 'width: 25px',min: 0%>
         </div>
       </td>
-      
+
       <td>
           <div class="field">
             <%= f.number_field :d03,:style=> 'width: 25px',min: 0%>
@@ -74,7 +74,7 @@
             <%= f.number_field :d04,:style=> 'width: 25px',min: 0%>
           </div>
       </td>
-      <td>        
+      <td>
         <div class="field">
             <%= f.number_field :d05,:style=> 'width: 25px',min: 0 %>
           </div>
@@ -94,7 +94,7 @@
             <%= f.number_field :d08,:style=> 'width: 25px',min: 0 %>
           </div>
       </td>
-      <td>        
+      <td>
         <div class="field">
             <%= f.number_field :d09,:style=> 'width: 25px',min: 0 %>
           </div>
@@ -116,7 +116,7 @@
             <%= f.number_field :d12,:style=> 'width: 25px',min: 0%>
           </div>
       </td>
-      <td>        
+      <td>
         <div class="field">
             <%= f.number_field :d13,:style=> 'width: 25px',min: 0%>
           </div>
@@ -138,7 +138,7 @@
             <%= f.number_field :d16,:style=> 'width: 25px',min: 0%>
           </div>
       </td>
-      <td>        
+      <td>
         <div class="field">
             <%= f.number_field :d17,:style=> 'width: 25px',min: 0 %>
           </div>
@@ -158,7 +158,7 @@
             <%= f.number_field :d20,:style=> 'width: 25px',min: 0%>
           </div>
       </td>
-      <td>        
+      <td>
         <div class="field">
             <%= f.number_field :d21,:style=> 'width: 25px',min: 0%>
           </div>
@@ -178,7 +178,7 @@
             <%= f.number_field :d24,:style=> 'width: 25px',min: 0 %>
           </div>
       </td>
-      <td>        
+      <td>
         <div class="field">
             <%= f.number_field :d25,:style=> 'width: 25px',min: 0 %>
           </div>
@@ -200,7 +200,7 @@
             <%= f.number_field :d28,:style=> 'width: 25px',min: 0%>
           </div>
       </td>
-      <td>        
+      <td>
         <div class="field">
             <%= f.number_field :d29,:style=> 'width: 25px',min: 0%>
           </div>
@@ -220,36 +220,46 @@
       <td>
         <div class="small">
           <%= f.text_field :quantity ,:style=> 'width: 100px', :readonly => true %>
-        </div>    
-      </td>    
-      
+        </div>
+      </td>
+
+
+    <td>
+      <div class="field">
+          <%= f.number_field :rating2,:style=> 'width: 50px',min: 0%>
+        </div>
+
+    </td>
+
+
       <td>
         <div class="field">
             <%= f.number_field :tarifa,:style=> 'width: 50px',min: 0%>
           </div>
-        
+
       </td>
-      
+
+
       <td>
         <div class="small">
           <%= f.number_field :price ,:style=> 'width: 100px', :readonly => true %>
-        </div>    
-      </td>    
+        </div>
+      </td>
       <td>
         <div>
           <%= f.number_field :total ,:style=> 'width: 100px', :readonly => true %>
         </div>
       </td>
     </tr>
-  
+
       </table>
   </div>
 
   <div class="form-actions">
     <%= f.hidden_field :avisodetail_id,:id => "ac_item_id" %>
-    
+
     <%= f.submit %>
-    
+
   </div>
 <% end %>
 
@@ -262,40 +272,40 @@
 			matchContains: 1,
       selectFirst: false
     });
-    
+
     $("#ac_customer").result(function(event, data, formatted) {
       $("#ac_customer_id").val(data[2]);
       $("#selected_customer").html(data[0]);
     });
-    
-    
-    
+
+
+
     $("#ac_user").autocomplete("/ordens/ac_user/<%= @company.id %>", {
 			matchSubset: 1,
 			matchContains: 1,
       selectFirst: false
     });
-    
+
     $("#ac_user").result(function(event, data, formatted) {
       $("#ac_user_id").val(data[2]);
       $("#selected_seller").html(data[0]);
     });
-    
+
     $("#ac_item").autocomplete("/ordens/ac_programs/<%= @orden.id %>", {
 			matchSubset: 1,
 			matchContains: 1,
       selectFirst: false
     });
-    
+
     $("#ac_item").result(function(event, data, formatted) {
-      $("#ac_item_id").val(data[2]);      
+      $("#ac_item_id").val(data[2]);
       updateItemOrden();
     });
-    
+
     $("#orden_product_tarifa").bind("keyup", function() {
       updateItemOrden();
     });
-    
+
     $("#orden_product_d01").bind("keyup", function() {
       updateItemOrden();
     });
@@ -320,7 +330,7 @@
     $("#orden_product_d08").bind("keyup", function() {
       updateItemOrden();
     });
-    
+
     $("#orden_product_d09").bind("keyup", function() {
       updateItemOrden();
     });
@@ -369,7 +379,7 @@
     $("#orden_product_d24").bind("keyup", function() {
       updateItemOrden();
     });
-    
+
     $("#orden_product_d25").bind("keyup", function() {
       updateItemOrden();
     });
@@ -395,6 +405,6 @@
     // Update price total for invoice
 
   });
-  
+
 
 </script>
