--- a/app/views/ordens/ordens_products/_form.html.erb
+++ b/app/views/ordens/ordens_products/_form.html.erb
@@ -38,10 +38,12 @@
         <th>29</th>
         <th>30</th>
         <th>31</th>
-        <th>Cantidad</th>
+        <th>Cantidad </th>
+        <th>R.Miles </th>
         <th>Tarifa</th>
         <th>Costo</th>
-        <th>Total</th>
+        <th>Total </th>
+
       </tr>
     <tr>
       <td>
