--- a/app/views/ordens/ordens_products/_form.html.erb
+++ b/app/views/ordens/ordens_products/_form.html.erb
@@ -228,7 +228,7 @@
 
     <td>
       <div class="field">
-          <%= f.number_field :rating2,:style=> 'width: 50px',min: 0%>
+          <%= f.text_field :rating2,:style=> 'width: 50px',min: 0%>
         </div>
 
     </td>
