--- a/app/views/layouts/pdf-header4.html.erb
+++ b/app/views/layouts/pdf-header4.html.erb
@@ -60,27 +60,35 @@
     
     <th width="4%">     </th>
     <th width="10%"> Cuota    </th>
-    <th width="10%">  Valor    </th>
-    <th width="10%">  </th>
+    <th width="10%"> Cuota Incl.    </th>
+    <th width="10%">  Valor </th>
+    <th width="10%"> Monto</th>
+    <th width="10%"> Monto </th>
     <th width="10%"> Total </th>
-    <th width="10%"> Factura  </th>
-    <th width="10%">  Factura 1     </th>
-    <th width="10%">  Factura 2     </th>
-    <th width="10%"> Fecha  </th>
-    <th width="4%">   </th>
-    
+    <th width="10%">    </th>
+    <th width="10%"> Total  </th>
+    <th width="4%">  Factura </th>
+    <th width="4%">  Factura </th>
+    <th width="4%">  Fecha  </th>
   </tr>
  <tr bgcolor="#B4D7F7">
     <th width="4%">  Nro.   </th>
     <th width="10%">  Vcmto   </th>
-    <th width="10%">      </th>
+   
     <th width="10%"> IGV </th>
-    <th width="10%"> Cuota </th>
-    <th width="10%"> Canal  </th>
-    <th width="10%">  Masa     </th>
-    <th width="10%">  Masa     </th>
-    <th width="10%"> Cancel. </th>
-    <th width="4%"> Sit.  </th>
+     <th width="10%">  Venta    </th>
+
+    <th width="10%"> Comision 1 </th>
+    <th width="10%"> Comision 2</th>
+    <th width="10%"> Comision   </th>
+    <th width="10%">  IGV    </th>
+    <th width="10%"> X Cobrar </th>
+    <th width="10%"> Canal </th>
+
+    <th width="10%"> Masa </th>
+
+    <th width="10%"> Factura </th>
+
     
   </tr>
     </table>
