--- a/app/views/reports/reports_ccobrar.html.erb
+++ b/app/views/reports/reports_ccobrar.html.erb
@@ -43,6 +43,21 @@
 </div>
 
 <div class="mid_box">
+
+
+  <h3>
+    Contratos 
+  </h3>
+  
+  <p class="big">
+    <%= link_to "Pendientes de Cobrar x canal  ", "/companies/reports/rpt_ccobrar10/#{@company.id}" %>
+  </p>
+
+   <p class="big">
+    <%= link_to "Pendientes de Facturar x canal    ", "/companies/reports/rpt_ccobrar20/#{@company.id}" %>
+  </p>
+
+
 </div>
 
 <%= br() %>
