--- a/app/views/contratos/index.html.erb
+++ b/app/views/contratos/index.html.erb
@@ -35,7 +35,12 @@
       <tr>
          <td class="small bordered_bottom bordered_right"><%= contrato.code %></td>
          <td class="small bordered_bottom bordered_right"><%= contrato.fecha.strftime("%d/%m/%Y") %></td>
+         <%if !contrato.customer.nil?%>
         <td class="small bordered_bottom bordered_right"><%= contrato.customer.name  %></td>
+        <% else %>
+          <td class="small bordered_bottom bordered_right"> Cliente no existe </td>
+        <% end %>
+
          <% if contrato.medio.nil? %> 
          <td class="small bordered_bottom bordered_right"><%= contrato.medio_id  %></td>
          
