--- a/app/views/reports/rpt_ccobrar20.html.erb
+++ b/app/views/reports/rpt_ccobrar20.html.erb
@@ -16,12 +16,12 @@ totals = []
 <h4>
   <%= image_tag("reports_48.png", :class => "vmiddle") %>
   
- Reporte de cuentas clientes - Pendientes x cobrar x Cliente 
+ Reporte de cuentas clientes - Pendientes x facturar x Cliente 
 
 </h4>
 
 
-<%= form_tag(rpt_ccobrar10_ordens_path, :method => "get") do %>
+<%= form_tag(rpt_ccobrar20_ordens_path, :method => "get") do %>
 
 
   <div class="field">
