--- a/app/views/contratos/show.html.erb
+++ b/app/views/contratos/show.html.erb
@@ -142,20 +142,20 @@
           <td class="bordered_right bordered_bottom">
             <%= quote.fecha.strftime("%d/%m/%Y")  %>
           </td>
-          <td class="bordered_right bordered_bottom">
+          <td class="bordered_left bordered_bottom">
             <%= money(quote.importe) %>
           </td>
                     
-          <td class="bordered_right bordered_bottom">
+          <td class="bordered_left bordered_bottom">
             <%= money(quote.vventa) %>
           </td>
-           <td class="bordered_right bordered_bottom">
+           <td class="bordered_left bordered_bottom">
             <%= money(quote.comision1)  %>
           </td>
-           <td class="bordered_right bordered_bottom">
+           <td class="bordered_left bordered_bottom">
             <%= money(quote.comision2) %>
           </td>
-          <td class="bordered_right bordered_bottom">
+          <td class="bordered_left bordered_bottom">
             <%= money(quote.total) %>
           </td>
         <td class="bordered_right bordered_bottom">
