--- a/app/views/contratos/_form.html.erb
+++ b/app/views/contratos/_form.html.erb
@@ -36,7 +36,7 @@
 
     
     <%= f.label :fecha %><br />
-    <%= f.text_field :fecha ,value:Time.now.strftime("%d/%m/%Y") %>
+    <%= f.text_field :fecha %>
 
     </div>
   
