--- a/app/views/contratos/index.html.erb
+++ b/app/views/contratos/index.html.erb
@@ -10,7 +10,7 @@
 
  <%= form_tag(contratos_path, :method => "get", id: "search-form") do %>
 
-  <%= text_field_tag :search, params[:search], placeholder: "Buscar por numero de contratos" %>
+  <%= text_field_tag :search2, params[:search2], placeholder: "Buscar Contratos por numero" %>
   <%= submit_tag "Buscar" %>
   <% end %>
 <table>
