--- a/app/views/ordens/ordens_products/_form.html.erb
+++ b/app/views/ordens/ordens_products/_form.html.erb
@@ -56,172 +56,174 @@
 
       <td>
         <div class="field">
-          <%= f.number_field :d01,:style=> 'width: 25px',min: 0  %>
+          <%= f.number_field :d01,:style=> 'width: 25px' , onblur: "updateItemOrden()" , min: 0  %>
         </div>
       </td>
 
       <td>
         <div class="field">
-          <%= f.number_field :d02,:style=> 'width: 25px',min: 0%>
+          <%= f.number_field :d02,:style=> 'width: 25px', onblur: "updateItemOrden()",min: 0%>
         </div>
       </td>
 
       <td>
           <div class="field">
-            <%= f.number_field :d03,:style=> 'width: 25px',min: 0%>
+            <%= f.number_field :d03,:style=> 'width: 25px', onblur: "updateItemOrden()",min: 0%>
           </div>
       </td>
       <td>
         <div class="field">
-            <%= f.number_field :d04,:style=> 'width: 25px',min: 0%>
+            <%= f.number_field :d04,:style=> 'width: 25px', onblur: "updateItemOrden()",min: 0%>
           </div>
       </td>
       <td>
         <div class="field">
-            <%= f.number_field :d05,:style=> 'width: 25px',min: 0 %>
+            <%= f.number_field :d05,:style=> 'width: 25px', onblur: "updateItemOrden()",min: 0 %>
           </div>
       </td>
       <td>
         <div class="field">
-            <%= f.number_field :d06,:style=> 'width: 25px',min: 0 %>
+            <%= f.number_field :d06,:style=> 'width: 25px', onblur: "updateItemOrden()",min: 0 %>
           </div>
       </td>
       <td>
         <div class="field">
-            <%= f.number_field :d07,:style=> 'width: 25px',min: 0%>
+            <%= f.number_field :d07,:style=> 'width: 25px', onblur: "updateItemOrden()",min: 0%>
           </div>
       </td>
       <td>
         <div class="field">
-            <%= f.number_field :d08,:style=> 'width: 25px',min: 0 %>
+            <%= f.number_field :d08,:style=> 'width: 25px', onblur: "updateItemOrden()",min: 0 %>
           </div>
       </td>
       <td>
         <div class="field">
-            <%= f.number_field :d09,:style=> 'width: 25px',min: 0 %>
-          </div>
-      </td>
-
-      <td>
-        <div class="field">
-            <%= f.number_field :d10,:style=> 'width: 25px',min: 0 %>
-          </div>
-      </td>
-      <td>
-        <div class="field">
-            <%= f.number_field :d11,:style=> 'width: 25px',min: 0%>
+            <%= f.number_field :d09,:style=> 'width: 25px', onblur: "updateItemOrden()",min: 0 %>
           </div>
       </td>
 
       <td>
         <div class="field">
-            <%= f.number_field :d12,:style=> 'width: 25px',min: 0%>
+            <%= f.number_field :d10,:style=> 'width: 25px', onblur: "updateItemOrden()",min: 0 %>
           </div>
       </td>
       <td>
         <div class="field">
-            <%= f.number_field :d13,:style=> 'width: 25px',min: 0%>
-          </div>
-      </td>
-
-      <td>
-        <div class="field">
-            <%= f.number_field :d14,:style=> 'width: 25px',min: 0%>
-          </div>
-      </td>
-      <td>
-        <div class="field">
-            <%= f.number_field :d15,:style=> 'width: 25px',min: 0 %>
+            <%= f.number_field :d11,:style=> 'width: 25px', onblur: "updateItemOrden()",min: 0%>
           </div>
       </td>
 
       <td>
         <div class="field">
-            <%= f.number_field :d16,:style=> 'width: 25px',min: 0%>
+            <%= f.number_field :d12,:style=> 'width: 25px', onblur: "updateItemOrden()",min: 0%>
           </div>
       </td>
       <td>
         <div class="field">
-            <%= f.number_field :d17,:style=> 'width: 25px',min: 0 %>
-          </div>
-      </td>
-      <td>
-        <div class="field">
-            <%= f.number_field :d18,:style=> 'width: 25px',min: 0 %>
-          </div>
-      </td>
-      <td>
-        <div class="field">
-            <%= f.number_field :d19,:style=> 'width: 25px',min: 0%>
-          </div>
-      </td>
-      <td>
-        <div class="field">
-            <%= f.number_field :d20,:style=> 'width: 25px',min: 0%>
-          </div>
-      </td>
-      <td>
-        <div class="field">
-            <%= f.number_field :d21,:style=> 'width: 25px',min: 0%>
-          </div>
-      </td>
-      <td>
-        <div class="field">
-            <%= f.number_field :d22,:style=> 'width: 25px',min: 0 %>
-          </div>
-      </td>
-      <td>
-        <div class="field">
-            <%= f.number_field :d23,:style=> 'width: 25px',min: 0%>
-          </div>
-      </td>
-      <td>
-        <div class="field">
-            <%= f.number_field :d24,:style=> 'width: 25px',min: 0 %>
-          </div>
-      </td>
-      <td>
-        <div class="field">
-            <%= f.number_field :d25,:style=> 'width: 25px',min: 0 %>
+            <%= f.number_field :d13,:style=> 'width: 25px', onblur: "updateItemOrden()",min: 0%>
           </div>
       </td>
 
       <td>
         <div class="field">
-            <%= f.number_field :d26,:style=> 'width: 25px',min: 0 %>
+            <%= f.number_field :d14,:style=> 'width: 25px', onblur: "updateItemOrden()",min: 0%>
           </div>
       </td>
       <td>
         <div class="field">
-            <%= f.number_field :d27,:style=> 'width: 25px',min: 0%>
+            <%= f.number_field :d15,:style=> 'width: 25px', onblur: "updateItemOrden()",min: 0 %>
+          </div>
+      </td>
+
+      <td>
+        <div class="field">
+            <%= f.number_field :d16,:style=> 'width: 25px', onblur: "updateItemOrden()",min: 0%>
+          </div>
+      </td>
+      <td>
+        <div class="field">
+            <%= f.number_field :d17,:style=> 'width: 25px', onblur: "updateItemOrden()",min: 0 %>
+          </div>
+      </td>
+      <td>
+        <div class="field">
+            <%= f.number_field :d18,:style=> 'width: 25px', onblur: "updateItemOrden()",min: 0 %>
+          </div>
+      </td>
+      <td>
+        <div class="field">
+            <%= f.number_field :d19,:style=> 'width: 25px', onblur: "updateItemOrden()",min: 0%>
+          </div>
+      </td>
+      <td>
+        <div class="field">
+            <%= f.number_field :d20,:style=> 'width: 25px', onblur: "updateItemOrden()",min: 0%>
+          </div>
+      </td>
+      <td>
+        <div class="field">
+            <%= f.number_field :d21,:style=> 'width: 25px', onblur: "updateItemOrden()",min: 0%>
+          </div>
+      </td>
+      <td>
+        <div class="field">
+            <%= f.number_field :d22,:style=> 'width: 25px', onblur: "updateItemOrden()",min: 0 %>
+          </div>
+      </td>
+      <td>
+        <div class="field">
+            <%= f.number_field :d23,:style=> 'width: 25px', onblur: "updateItemOrden()",min: 0%>
+          </div>
+      </td>
+      <td>
+        <div class="field">
+            <%= f.number_field :d24,:style=> 'width: 25px', onblur: "updateItemOrden()",min: 0 %>
+          </div>
+      </td>
+      <td>
+        <div class="field">
+            <%= f.number_field :d25,:style=> 'width: 25px', onblur: "updateItemOrden()",min: 0 %>
           </div>
       </td>
 
       <td>
         <div class="field">
-            <%= f.number_field :d28,:style=> 'width: 25px',min: 0%>
+            <%= f.number_field :d26,:style=> 'width: 25px',min: 0  , onblur: "updateItemOrden()"  %>
           </div>
       </td>
       <td>
         <div class="field">
-            <%= f.number_field :d29,:style=> 'width: 25px',min: 0%>
+            <%= f.number_field :d27,:style=> 'width: 25px', onblur: "updateItemOrden()",min: 0%>
+          </div>
+      </td>
+
+      <td>
+        <div class="field">
+            <%= f.number_field :d28,:style=> 'width: 25px', onblur: "updateItemOrden()",min: 0%>
+          </div>
+      </td>
+      <td>
+        <div class="field">
+            <%= f.number_field :d29,:style=> 'width: 25px', onblur: "updateItemOrden()",min: 0%>
           </div>
       </td>
 
 
       <td>
         <div class="field">
-            <%= f.number_field :d30,:style=> 'width: 25px',min: 0%>
+            <%= f.number_field :d30,:style=> 'width: 25px', onblur: "updateItemOrden()",min: 0%>
           </div>
       </td>
       <td>
         <div class="field">
-            <%= f.number_field :d31,:style=> 'width: 25px',min: 0 %>
+            <%= f.number_field :d31,:style=> 'width: 25px', onblur: "updateItemOrden()",min: 0 %>
           </div>
       </td>
       <td>
         <div class="small">
-          <%= f.text_field :quantity ,:style=> 'width: 100px', :readonly => true %>
+
+           <p id= "product_qty"  align="right" </p>
+          
         </div>
       </td>
 
@@ -244,12 +246,15 @@
 
       <td>
         <div class="small">
-          <%= f.number_field :price ,:style=> 'width: 100px', :readonly => true %>
+           <p id= "product_price"   align="right"></p>
+        
         </div>
+
       </td>
       <td>
         <div>
-          <%= f.number_field :total ,:style=> 'width: 100px', :readonly => true %>
+          <p id= "product_total"   align="right"></p>
+        
         </div>
       </td>
     </tr>
@@ -303,6 +308,28 @@
       $("#ac_item_id").val(data[2]);
       updateItemOrden();
     });
+
+
+        $('.selector').keydown(function (e) {
+      var arrow = { left: 37, up: 38, right: 39, down: 40 };
+
+      switch (e.which) {
+        case arrow.left:
+           updateItemOrden();
+          
+        case arrow.up:
+          //..
+          alert("key up") ; 
+        updateItemOrden();
+        case arrow.right:
+          //..
+        updateItemOrden();
+        case arrow.down:
+          //..
+         updateItemOrden();
+      }
+    });
+
 
     $("#orden_product_tarifa").bind("keyup", function() {
       updateItemOrden();
@@ -388,6 +415,7 @@
     $("#orden_product_d26").bind("keyup", function() {
       updateItemOrden();
     });
+
     $("#orden_product_d27").bind("keyup", function() {
       updateItemOrden();
     });
@@ -408,5 +436,66 @@
 
   });
 
+
+
+  // Update price total for invoice
+  function updateItemOrden() {
+    var quantity = $("#ac_item_quantity").val();
+    var price = $("#ac_item_price").val();
+    var discount = $("#ac_item_discount").val();
+
+    var d1 = $("#orden_product_d01").val();
+    var d2 = $("#orden_product_d02").val();
+    var d3 = $("#orden_product_d03").val();
+    var d4 = $("#orden_product_d04").val();
+    var d5 = $("#orden_product_d05").val();
+    var d6 = $("#orden_product_d06").val();
+    var d7 = $("#orden_product_d07").val();
+    var d8 = $("#orden_product_d08").val();
+    var d9 = $("#orden_product_d09").val();
+    var d10 = $("#orden_product_d10").val();
+    var d11 = $("#orden_product_d11").val();
+    var d12 = $("#orden_product_d12").val();
+    var d13 = $("#orden_product_d13").val();
+    var d14 = $("#orden_product_d14").val();
+    var d15 = $("#orden_product_d15").val();
+    var d16 = $("#orden_product_d16").val();
+    var d17 = $("#orden_product_d17").val();
+    var d18 = $("#orden_product_d18").val();
+    var d19 = $("#orden_product_d19").val();
+    var d20 = $("#orden_product_d20").val();
+    var d21 = $("#orden_product_d21").val();
+    var d22 = $("#orden_product_d22").val();
+    var d23 = $("#orden_product_d23").val();
+    var d24 = $("#orden_product_d24").val();
+    var d25 = $("#orden_product_d25").val();
+    var d26 = $("#orden_product_d26").val();
+    var d27 = $("#orden_product_d27").val();
+    var d28 = $("#orden_product_d28").val();
+    var d29 = $("#orden_product_d29").val();
+    var d30 = $("#orden_product_d30").val();
+    var d31 = $("#orden_product_d31").val();
+    var tarifa = $("#orden_product_tarifa").val();
+
+
+    var duracion =  <%= @orden.tiempo %>;
+
+    var costo  = (tarifa / 30) * duracion ;
+
+      
+    var qty  = parseFloat(d1)  + parseFloat(d2)  + parseFloat(d3)  + parseFloat(d4) + parseFloat(d5)  +          parseFloat(d6)  + parseFloat(d7)  + parseFloat(d8)  + parseFloat(d9) + parseFloat(d10) +
+                parseFloat(d11) + parseFloat(d12) + parseFloat(d13) + parseFloat(d14) + parseFloat(d15) + parseFloat(d16) + parseFloat(d17) + parseFloat(d18) + parseFloat(d19) + parseFloat(d20) + parseFloat(d21) + parseFloat(d22) + parseFloat(d23) + parseFloat(d24) + parseFloat(d25) + parseFloat(d26) + parseFloat(d27) +parseFloat(d28) + parseFloat(d29) + parseFloat(d30) + parseFloat(d31) ;
+
+
+      var importe = qty  * costo;         
+      
+
+       document.getElementById("product_qty").innerHTML = Number((qty).toFixed(2));
+       document.getElementById("product_total").innerHTML = Number((importe).toFixed(2));
+        document.getElementById("product_price").innerHTML = Number((costo).toFixed(2));
+
+  
+      
+  }
 
 </script>
