--- a/app/views/ordens/_list.html.erb
+++ b/app/views/ordens/_list.html.erb
@@ -51,7 +51,7 @@
 
           
           <td class="bordered_right bordered_bottom <%= orden.processed_color %>">
-            <%= orden.get_processed_short %>
+            <%= orden.get_processed %>
           </td>
           <td class="bordered_right bordered_bottom">
             <%= link_to "Ver", orden %>
