--- a/app/views/layouts/pdf-header2.html.erb
+++ b/app/views/layouts/pdf-header2.html.erb
@@ -39,7 +39,7 @@
 
      <tr >
   
-    <th width="60%"> <center> Desde: <%= @fecha1.to_s %>  Hasta: <%= @fecha2.to_s %> </center></th>
+    <th width="60%"> <center> Desde: <%= @mes1  %> <%= @anio1  %>  Hasta: <%= @mes2  %> <%= @anio2  %>  </center></th>
     <th width="20%"> Pag.:<span class="page">[page]  </span> / <span class="topage">[topage]  </span> </th>
   
     
