--- a/app/views/reports/rpt_contratos3_pdf.html.erb
+++ b/app/views/reports/rpt_contratos3_pdf.html.erb
@@ -34,15 +34,15 @@
         <div class="field">
           <input id="check_medio" name="check_medio" type="checkbox" value="true" checked />
           <div class="small">
-            Todos los Medios
+            Todos los Clientes
           </div>
         </div>
         
       </td>
       <td>
       <div class="field">
-        <h5>  Medios </h5>
-        <%= select_tag(:medio_id,options_from_collection_for_select(@medios,'id','full_name'),:id => "medio_select"  ) %>
+        <h5>  Clientes </h5>
+        <%= select_tag(:customer_id,options_from_collection_for_select(@customers,'id','name'),:id => "medio_select"  ) %>
       </div>
       </td>
       
