--- a/app/views/supplier_payments/rpt_contrato_01.pdf.erb
+++ b/app/views/supplier_payments/rpt_contrato_01.pdf.erb
@@ -127,13 +127,14 @@
                <% tot_canc2 += contrato2.importe  %>
             <% end %>    
 
-             <% if contrato2.factura1 != nil  and  contrato2.sit != "1" %>
+
+             <% if contrato2.factura1.nil? and  contrato2.facturacanal != nil %>
                <% tot_cob1 += contrato2.vventa %>
                <% tot_cob2 += contrato2.importe  %> 
 
              <% end %>
 
-             <%if contrato2.factura1.nil? %>
+             <%if contrato2.facturacanal.nil?   %>
 
                <% tot_fact1 += contrato2.vventa %>
                <% tot_fact2 += contrato2.importe  %> 
