--- a/app/views/ordens/ordens_products/_form.html.erb
+++ b/app/views/ordens/ordens_products/_form.html.erb
@@ -222,7 +222,7 @@
       <td>
         <div class="small">
 
-           <p id= "product_qty"  align="right" </p>
+           <p id= "product_qty"  align="right"> </p>
           
         </div>
       </td>
