--- a/app/views/supplier_payments/rpt_banco_1.pdf.erb
+++ b/app/views/supplier_payments/rpt_banco_1.pdf.erb
@@ -58,7 +58,7 @@
             <td width="50%"> SALDO ANTERIOR  </td>
             <td width="10%" align="right" >  </td>
             <td width="10%" align="right" >  </td>
-            <td width="10%" align="right" >  <%= @saldo %>  </td>
+            <td width="10%" align="right" >  <%= money(@saldo) %>  </td>
             </tr>     
 
 
