--- a/app/views/ciudads/index.html.erb
+++ b/app/views/ciudads/index.html.erb
@@ -18,7 +18,10 @@
         <td><%= ciudad.comments %></td>
         <td><%= link_to 'Show', ciudad %></td>
         <td><%= link_to 'Edit', edit_ciudad_path(ciudad) %></td>
+         <%     if current_user.level != "admin"  %>
+
         <td><%= link_to 'Destroy', ciudad, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <% end %>
       </tr>
     <% end %>
   </tbody>
