--- a/app/views/payments/index.html.erb
+++ b/app/views/payments/index.html.erb
@@ -20,7 +20,11 @@
         <td><%= payment.day %></td>
         <td><%= link_to 'Show', payment %></td>
         <td><%= link_to 'Edit', edit_payment_path(payment) %></td>
+         <%     if current_user.level != "admin"  %>
+
         <td><%= link_to 'Destroy', payment, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+
+        <% end %>
       </tr>
     <% end %>
   </tbody>
