--- a/app/views/tipoavisos/index.html.erb
+++ b/app/views/tipoavisos/index.html.erb
@@ -18,7 +18,11 @@
         <td><%= tipoaviso.comments %></td>
         <td><%= link_to 'Show', tipoaviso %></td>
         <td><%= link_to 'Edit', edit_tipoaviso_path(tipoaviso) %></td>
+         <%     if current_user.level != "admin"  %>
+
         <td><%= link_to 'Destroy', tipoaviso, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+
+        <% end %>
       </tr>
     <% end %>
   </tbody>
